--- a/styles.css
+++ b/styles.css
@@ -453,10 +453,6 @@ html, body {
     color: #333;
     font-family: "Microsoft YaHei", "SimHei", sans-serif;
     font-size: 32px;
-    /* margin: 0 0 20px 0;
+    margin: 0 0 0px 0;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
-    background-color: rgba(255, 255, 255, 0.5);
-    padding: 10px 20px;
-    border-radius: 8px;
-    border: 2px solid rgba(85, 103, 156, 0.3); */
 }
